# ferm-bot

./: .env.example  .gitignore  Makefile  README.md  REORGANIZATION_PLAN.md  add_application_rates.py  docker-compose.yml  pyproject.toml
bot/: README.md  __init__.py  config.py  database.py  logger.py  main.py  queries.py  states.py
bot/handlers/: __init__.py  ai_consultation.py  catalog.py  menu.py  start.py
bot/keyboards/: __init__.py  inline.py  phone.py  reply.py
bot/middlewares/: __init__.py  phone_check.py
bot/models/: __init__.py  cart_item.py  category.py  product.py  user.py
bot_v2/: README.md  __init__.py  main.py
core/: __init__.py  bot.py  config.py
core/database/: database.py  models.py  queries.py  queries_weather.py
core/handlers/: __init__.py  catalog.py  start.py  weather.py  weather_callbacks.py
core/keyboards/: inline.py  reply.py
core/services/weather/: accuweather_client.py  recommendations.py  service.py
core_reference/: Dockerfile
core_reference/core/handlers/: cart.py  catalog.py
core_reference/core/keyboards/: reply.py
core_reference/core/services/: ferm_api.py
core_reference/core/services/weather/: scheduler.py
