[tool.poetry]
name = "ferm-bot"
version = "1.0.0"
description = "Агротехнологічний Telegram-бот для платформи FERM"
authors = ["FERM Team <admin@ferm.in.ua>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
# Telegram Bot
aiogram = "^3.13.1"
# База даних
sqlalchemy = "^2.0.44"
aiosqlite = "^0.21.0"
alembic = "^1.13.0"
# HTTP клієнт
httpx = "^0.27.2"
# Конфігурація
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
python-dotenv = "^1.0.1"
# Кешування
redis = "^5.2.0"
# ШІ інтеграції
openai = "^1.55.3"
# Email
aiosmtplib = "^3.0.2"
# Планування задач
apscheduler = "^3.10.4"
# Логування
loguru = "^0.7.2"
asyncpg = "^0.31.0"

[tool.poetry.group.dev.dependencies]
# Форматування та лінтинг
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
mypy = "^1.13.0"
# Тестування
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
# Pre-commit
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]